# Visual

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.gradle.kts  gradle.properties  gradle.properties.template  scenicView.properties  settings.gradle.kts
.run/: VisualModelApplication.run.xml
assets/: logo.icns
buildSrc/: build.gradle.kts
docs/: build.gradle.kts
document/: build.gradle.kts
executable/: build.gradle.kts
gradle/: libs.versions.toml
node_graph/: Cargo.toml
shared/: build.gradle.kts
src/: core.rs  editor.rs  eui.rs  main.rs  setting.rs  state.rs  table.rs  ui.rs  welcome.rs
ui/: build.gradle.kts
visual-api/: build.gradle.kts
visual-app/: build.gradle.kts
visual-collaboration-server/: build.gradle.kts
visual-config/: build.gradle.kts
visual-core/: build.gradle.kts
visual-data-structure/: build.gradle.kts
visual-database/: build.gradle.kts
visual-dsl/: build.gradle.kts
visual-editor/: build.gradle.kts
visual-i18n/: build.gradle.kts
visual-maven/: build.gradle.kts
visual-model-annotation/: build.gradle.kts
visual-model-anntation/: build.gradle.kts
visual-model-app/: build.gradle.kts  scenicView.properties
visual-model-codegen/: build.gradle.kts
visual-model-database/: build.gradle.kts
visual-model-debugger/: build.gradle.kts
visual-model-editor/: build.gradle.kts
visual-model-git/: build.gradle.kts
visual-model-graph-editor/: build.gradle.kts
visual-model-i18n/: build.gradle.kts
visual-model-serialization/: build.gradle.kts
visual-model-shared/: build.gradle.kts
visual-model-sql/: build.gradle.kts
visual-model-ui/: build.gradle.kts
visual-model-ui-component/: build.gradle.kts
visual-model-ui-inspector/: build.gradle.kts
(+3146 files in other folders)
