[package]
name = "visual"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = { workspace = true, features = ['log'] }
eframe = { workspace = true, features = ["wgpu", "persistence", "serde", "accesskit"] }
serde = { workspace = true, features = ["derive"] }
ron = "0.8"
egui_file = "0.22"
egui_material_icons = "0.3.0"
redb = "2.4.0"
node_graph = { path = "node_graph" }
dirs = "6.0.0"

[workspace]
members = [
    '.',
    'node_graph'
]

[workspace.dependencies]
egui = "0.31.1"
eframe = "0.31.1"
serde = "1"